refactor: migrate server module to JDK 21 - replace deprecated APIs
- Replace Class.newInstance() with Class.getDeclaredConstructor().newInstance()
  in ApiAsyncJobDispatcher, ApiResponseHelper, APIAuthenticationManagerImpl
- Replace new URL() with URI.create().toURL() in TemplateManagerImpl,
  VolumeApiServiceImpl, ExternalIpAddressAllocator
- Replace deprecated wrapper constructors (new Long/Integer/Boolean/Double)
  with valueOf() factory methods across 20 files

Co-Authored-By: hitomi.sawamura@gmail.com <hitomi.sawamura@gmail.com>